--- a/blackjackGame/index.html
+++ b/blackjackGame/index.html
@@ -10,7 +10,7 @@
     <h1>BlackJack</h1>
     <p id="message-el">Want to play a round?</p>
     <p>Cards:</p>
-    <p>Sum:</p>
+    <p id="sum-el">Sum: </p>
     <!-- Create a button that says START GAME.
      Make it cal a startGame() function when clicked -->
     <button onclick="startGame()">START GAME</button>
